<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".order.SelectareMasaRestaurant.NumarMasaKlandestin">

    <TextView
        android:id="@+id/tv_klandestin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Klandestin"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tv_selectati_masa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selectati masa"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_klandestin"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_selectati_masa">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOrderMasa1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/animation_list_btn_1"
            android:textColor="@color/white"
            android:onClick="btnMasa1"
            android:text="@string/masa_1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOrderMasa2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/animation_list_btn_1"
            android:textColor="@color/white"
            android:onClick="btnMasa2"
            android:text="@string/masa_2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOrderMasa3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/animation_list_btn_1"
            android:textColor="@color/white"
            android:onClick="btnMasa3"
            android:text="@string/masa_3" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>