<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="3">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOrderMasa1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/animation_list_btn_1"
            android:textColor="@color/white"
            android:onClick="btnMasa1"
            android:text="@string/masa_1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOrderMasa2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/animation_list_btn_1"
            android:textColor="@color/white"
            android:onClick="btnMasa2"
            android:text="@string/masa_2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOrderMasa3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/animation_list_btn_1"
            android:textColor="@color/white"
            android:onClick="btnMasa3"
            android:text="@string/masa_3" />

    </LinearLayout>


    <Button
        android:id="@+id/btnCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnCalendar"
        android:text="Calendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="90dp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_mese_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_directions_car_24"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_mese_walk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_directions_walk_24"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fab_mese_car"
        />


</androidx.constraintlayout.widget.ConstraintLayout>