<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".order.menu.XanaduMenu.Masa1.XanaduSupe1Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_keyboard_arrow_left_black_24dp" />

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_toStartOf="@+id/iv_cart"
                    android:text="Cart:"
                    android:layout_marginEnd="6dp"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/iv_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="right"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="35dp"
                    android:layout_marginRight="35dp"
                    android:background="@drawable/ic_baseline_shopping_cart_24"
                    android:backgroundTint="@color/cart_background"
                    app:layout_constraintLeft_toRightOf="parent" />

            </RelativeLayout>


            <TextView
                android:id="@+id/tv_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="20dp"
                android:textSize="25sp"
                android:text="Select your choice"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"
                />
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/Supa_de_pui_cu_galuste_mt"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/Supa_de_pui_cu_galuste_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/supa_de_pui_cu_galuste"
                    android:scaleType="centerCrop">
                </ImageView>

                <TextView
                    android:id="@+id/Supa_de_pui_cu_galuste_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/supa_de_pui_cu_galuste"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="50sp"
                    android:layout_gravity="center"
                    android:textStyle="italic">
                </TextView>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/Ciorba_de_fasole_cu_afumatura_mt"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/Ciorba_de_fasole_cu_afumatura_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ciorba_de_fasole_cu_afumatura"
                    android:scaleType="centerCrop">
                </ImageView>

                <TextView
                    android:id="@+id/Ciorba_de_fasole_cu_afumatura_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ciorba_de_fasole_cu_afumatura"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="50sp"
                    android:layout_gravity="center"
                    android:textStyle="italic">
                </TextView>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/Ciorba_de_vacuta_mt"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/Ciorba_de_vacuta_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ciorba_de_vacuta"
                    android:scaleType="centerCrop">
                </ImageView>

                <TextView
                    android:id="@+id/Ciorba_de_vacuta_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ciorba_de_vacuta"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="50sp"
                    android:layout_gravity="center"
                    android:textStyle="italic">
                </TextView>
            </com.google.android.material.card.MaterialCardView>



        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>